kubernetes/application/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway
    environment: production
  namespace: application-namespace
  annotations:
    checkov.io/skip1: CKV_K8S_43=I will add commits when I apply the aws infrastructure
    checkov.io/skip2: CKV_K8S_14= I will add commits when I apply the aws infrastructure
    checkov.io/skip3: CKV_K8S_35
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 30000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: api-gateway-service-account
      containers:
        - name: api-gateway
          image: >-
            499024813019.dkr.ecr.eu-west-2.amazonaws.com/api-gateway:563d5c53bc0fc7353a09756edc9244f9450bfc2e-129
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 250m
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
